@@ -14,43 +14,51 @@ Upstream ships only a `.deb` (inside a WordPress `.zip`) containing:
 - A bundled OpenJDK 11 JRE (~140 MB) and the install4j launcher runtime.
 - Turkish user-manual PDFs.
 
-This package strips the bundled JRE and the install4j launcher, repackaging
-the essentials using system Java and Arch conventions. There is no public
-source, so the package is named `akia` rather than `akia-bin` (see
+This package does not install the bundled JRE or the install4j launcher.
+`prepare()` extracts only the jar, `.so`, icon, and two PDFs. The app runs on
+system Java. There is no public source, so the package is named `akia` rather
+than `akia-bin` (see
 [Nonfree applications package guidelines](https://wiki.archlinux.org/title/Nonfree_applications_package_guidelines#Package_naming)).
 
 ## Layout
 
-| Path                                      | Purpose                               |
+| Path | Purpose |
 |-------------------------------------------|---------------------------------------|
-| `/usr/bin/akia`                           | POSIX launcher wrapper                |
-| `/usr/share/java/akia/akia.jar`           | Main application jar (arch-independent) |
-| `/usr/lib/akia/libakisp11.so`             | PKCS#11 native library (x86_64)       |
-| `/usr/share/applications/akia.desktop`    | Desktop menu entry                    |
-| `/usr/share/icons/hicolor/48x48/apps/akia.png` | Icon (extracted from upstream `.ico`) |
+| `/usr/bin/akia` | Wrapper around `/usr/bin/java` |
+| `/usr/share/java/akia/akia.jar` | Main application jar |
+| `/usr/lib/akia/libakisp11.so` | PKCS#11 native library (x86_64) |
+| `/usr/lib/libakisp11.so` | Symlink → `akia/libakisp11.so` |
+| `/usr/share/applications/akia.desktop` | Desktop entry (`StartupWMClass=controller-Main`) |
+| `/usr/share/icons/hicolor/48x48/apps/akia.png` | 48×48 icon (icotool index 2; upstream ICO named `Akia.png`) |
 | `/usr/share/doc/akia/akia-user-guide.pdf`, `smartcard-technology.pdf` | Turkish user manuals |
-| `/usr/share/licenses/akia/LICENSE`        | License notice                        |
+| `/usr/share/licenses/akia/LICENSE` | License notice |
 
-The jar (`model.MRegistry`) hardcodes the PKCS#11 library lookup to the
-absolute path `/usr/lib/libakisp11.so`. The package ships a pacman-owned
-symlink at that path pointing to `/usr/lib/akia/libakisp11.so`, so the real
-binary stays namespaced while the jar still finds it. The wrapper also
-exports `-Djava.library.path=/usr/lib/akia` as defense-in-depth.
+The jar (`model.MRegistry`) hardcodes PKCS#11 lookup to
+`/usr/lib/libakisp11.so`. The symlink is required (upstream `postinst` copied
+the `.so` there). `-Djava.library.path=/usr/lib/akia` is for JNA, not that
+lookup.
 
-It also `cd`s to `${XDG_DATA_HOME:-$HOME/.local/share}/akia` before `exec java`,
-so any runtime writes stay under the user's home.
+The wrapper also passes
+`--add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED`
+(needed on JRE 17+; accepted on 11; rejected on 8) and `cd`s to
+`${XDG_DATA_HOME:-$HOME/.local/share}/akia` so cwd-relative writes stay in the
+home directory.
 
 ## Requirements
 
-- `java-runtime>=8`
-- `pcsclite` (with `pcscd.socket` enabled: `systemctl enable --now pcscd.socket`)
+- `java-runtime>=11` (the export flag above is fatal on 8)
+- `pcsclite` (enable the daemon: `systemctl enable --now pcscd.socket`)
 - `ccid` — USB CCID smart card reader driver
+- `hicolor-icon-theme`
 - A supported smart card reader
+
+`pcsc-tools` is optional (reader debugging). `icoutils` is a make dependency
+(icon extract).
 
 ## Build
 
 ```sh
-updpkgsums                 # refresh sha256sums
+updpkgsums                 # refresh b2sums
 makepkg -si                # build + install
 namcap PKGBUILD            # lint sources
 namcap akia-*.pkg.tar.zst  # lint built pkg
@@ -70,13 +78,13 @@ For each new release:
 2. Update `_debyear` / `_debmonth` to match the upstream upload path.
    (`_debver` is derived from `pkgver` automatically.)
 3. Reset `pkgrel=1`.
-4. Run `updpkgsums` to refresh the `.deb.zip` hash.
+4. Run `updpkgsums` to refresh the `.deb.zip` hash (`b2sums` only).
 5. `makepkg --printsrcinfo > .SRCINFO`.
 6. Build + test locally (see *Functional test* below).
 7. Commit, push to AUR.
 
 If upstream replaces the `.deb.zip` at the same URL without a version bump,
-the sha256 will mismatch — bump `pkgrel` and refresh the hash.
+the b2sum will mismatch — bump `pkgrel` and refresh the hash.
 
 ## Functional test
 
@@ -84,18 +92,20 @@ After `makepkg -si`:
 
 1. `systemctl enable --now pcscd.socket`
 2. Run `akia` in a terminal; confirm the GUI opens with no
-   `UnsatisfiedLinkError` or `ClassNotFoundException`.
+   `UnsatisfiedLinkError`, `ClassNotFoundException`, or PKCS#11
+   `IllegalAccessError` on `sun.security.pkcs11.wrapper`.
 3. `pgrep -af 'java.*akia.jar'` should show a single `java` process
-   with `-Djava.library.path=/usr/lib/akia` in its argv.
+   with `--add-exports …sun.security.pkcs11.wrapper=ALL-UNNAMED` and
+   `-Djava.library.path=/usr/lib/akia` in its argv.
 4. Insert a real AKİS card and perform a login / signing flow.
 5. `lsof -p <pid> | grep akisp11` should point at
-   `/usr/lib/akia/libakisp11.so`.
+   `/usr/lib/akia/libakisp11.so` (via `/usr/lib/libakisp11.so`).
 6. Launch from the DE application menu; the taskbar should group
-   correctly (validates `StartupWMClass`).
+   correctly (`StartupWMClass=controller-Main`, measured on `java -jar`).
 
-If `StartupWMClass` is wrong when launching via `java -jar` (versus the
-upstream install4j launcher), run `xprop WM_CLASS` on the window and
-update `akia.desktop` accordingly.
+If grouping is wrong, run `xprop WM_CLASS` on the window and update
+`akia.desktop`. Do not reuse the upstream install4j class
+(`install4j-controller-Main`); this package does not ship that launcher.
 
 ## Relationship to `akia-bin`
 
@@ -107,13 +117,8 @@ conflicts=('akia-bin')
 replaces=('akia-bin')
 ```
 
-Users of `akia-bin` are migrated when they install `akia`. Reverse
-dependencies already ask for `akia`:
-
-| Package              | Relation          |
-|----------------------|-------------------|
-| `eimza`              | hard dependency   |
-| `uyap-editor-bin`    | optional (project-specific) |
+Users of `akia-bin` are migrated when they install `akia`.
+`uyap-editor-bin` optionally depends on `akia`.
 
 Verify on a live system with:
 
@@ -123,6 +128,6 @@ pacman -T akia   # exit 0 means the `akia` dep is satisfied
 
 ## License
 
-See `LICENSE`. The upstream Akia application is TÜBİTAK proprietary
-(terms published on the support page). The packaging scripts in this
-repository are MIT-licensed.
+`license=('LicenseRef-proprietary')`. The upstream Akia application is TÜBİTAK
+proprietary (terms published on the support page). The packaging scripts in
+this repository are MIT-licensed. See `LICENSE`.
